safari inputs look bad by defualt on ios, this should fix that

--- a/wp-content/themes/eyebeam2019/style.css
+++ b/wp-content/themes/eyebeam2019/style.css
@@ -1220,6 +1220,8 @@ font-family: "EyebeamSans", sans-serif;
     text-align: left;
     flex-grow: 2;
     padding: 0 0 0 1rem;
+		-webkit-appearance: none;
+-webkit-border-radius: 0;
 }
 
 footer input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
